# Independent-Study_DP-SC

./: .gitignore  Character Error Rate.ipynb  DP-SGD.py  Get-result FIX.ipynb  Get-result.ipynb  Mask_DP-SGD.py  Mask_SGD.py  Model-1_SGD.py  Model-2_DP-SGD.py  Model-3_Mask-SGD.py  Model-4_DP-Mask-SGD.py  Model.py  Note.txt  README.md  Result.txt  SGD.py  base_score.py  class_model.py  clean.py  count.py  create_vocab.py  get-result-text.py  get_character_error_rate.py  get_result_text.py  model.py  pyproject.toml  voc  vocab.ipynb
GLEU/: compute_gleu  compute_gleu.py  gleu.py
Note/: Character Error Rate.txt  Count.txt  Fix Opacus  Fix Opacus.txt  GLEU.txt
dataset/: dataset.txt
